--- a/Rock-Paper-Scessior/Rock-Paper-Scessior.html
+++ b/Rock-Paper-Scessior/Rock-Paper-Scessior.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 
-        <p class="title">Rock Paper Scessior Game :-</p>
+        <p class="title">Rock Paper Scissor Game :-</p>
 
         <button class="move-button" onclick="
             playGame('rock');
